# PlayScraper-API

./: README.md  ejemplo_prediccion.py  main.py  pyproject.toml
app/: extract_data.py
settings/: settings.py
src/model/: README.md  main.py  model.py  predict.py
src/scraper/: main.py
src/settings/: settings.py
src/utils/: utils.py
