[project]
name = "playscraper-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bertopic>=0.17.3",
    "datamapplot>=0.6.4",
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "google-play-scraper>=1.2.7",
    "ipykernel>=7.1.0",
    "kaleido>=1.2.0",
    "nbformat>=5.10.4",
    "openai>=2.8.1",
]
